<resources>
    <string name="app_name">Trillio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Splash</string>

    <string name="radio1">EDM</string>
    <string name="radio2">Trap</string>
    <string name="radio3">Rap</string>

    <string-array name="bars">
        <item>1</item>
        <item>2</item>
        <item>4</item>
    </string-array>

    <string name="radio4">136</string>
    <string name="radio5">128</string>
    <string name="radio6">108</string>
    <string name="radio7">92</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_play">Play</string>
</resources>
